# Design-Patterns

./: README.md  pyproject.toml
behavioral-patterns/: README.md
behavioral-patterns/strategy/: README.md  main.py  microbial_health_index_calculator.py  microbial_health_index_strategy.py  plant_protein_based_strategy.py  richness_based_strategy.py
behavioral-patterns/template-method/: README.md  exercise_template.py  knee_flexion.py  shoulder_extension.py
creational-patterns/: README.md
creational-patterns/abstract-factory/: README.md  abstract_factory.py  color.py  factory_producer.py  shape.py
creational-patterns/abstract-factory/colors/: __init__.py  blue.py  green.py  red.py
creational-patterns/abstract-factory/factories/: __init__.py  color_factory.py  shape_factory.py
creational-patterns/abstract-factory/shapes/: __init__.py  line.py  rectangle.py  triangle.py
creational-patterns/factory-method/: README.md  transport.py  transport_factory.py
creational-patterns/factory-method/transports/: __init__.py  bike.py  car.py  ship.py
creational-patterns/singleton/: README.md  database.py
